Se agrega agregan dependecias para cordova y se implementa funcionalidad streaming audio

--- a/Poliradio/ionic.config.json
+++ b/Poliradio/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "Poliradio",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {},
+    "cordova": {}
   },
   "type": "angular",
   "id": "ffa22871"
