--- a/Poliradio/package.json
+++ b/Poliradio/package.json
@@ -25,6 +25,7 @@
     "@capacitor/cli": "1.5.1",
     "@capacitor/core": "1.5.1",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/local-notifications": "^5.25.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/streaming-media": "^5.25.0",
@@ -32,6 +33,8 @@
     "@ionic/pro": "2.0.4",
     "cordova-android": "^8.1.0",
     "cordova-browser": "6.0.0",
+    "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-streaming-media": "^2.2.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
@@ -40,6 +43,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@babel/compat-data": "~7.8.0",
     "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "~8.3.23",
     "@angular/compiler": "~8.2.14",
@@ -79,7 +83,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-local-notification": {}
     },
     "platforms": [
       "browser",
