--- a/Poliradio/package.json
+++ b/Poliradio/package.json
@@ -26,6 +26,7 @@
     "@capacitor/core": "1.5.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/local-notifications": "^5.25.0",
+    "@ionic-native/screen-orientation": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/streaming-media": "^5.25.0",
@@ -35,8 +36,10 @@
     "cordova-browser": "6.0.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-screen-orientation": "^3.0.2",
     "cordova-plugin-streaming-media": "^2.2.0",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -82,9 +85,12 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-local-notification": {}
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-screen-orientation": {}
     },
     "platforms": [
       "browser",
